Prevent HS form overflow

--- a/src/sass/pages/events.scss
+++ b/src/sass/pages/events.scss
@@ -3,3 +3,9 @@
     border-radius: .5rem;
   }
 }
+
+// HubSpot Forms
+
+.hs-form-iframe {
+  width: 100% !important;
+}
